--- a/article.html
+++ b/article.html
@@ -20,7 +20,7 @@
     </header>
     
     <aside>
-      <img src="https://www.google.com/logos/doodles/2023/paz-marquez-benitezs-129th-birthday-6753651837109848-law.gif" alt="">
+      <img src="https://www.google.com/logos/doodles/2023/paz-marquez-benitezs-129th-birthday-6753651837109848-law.gif" alt="Girl in the viloet background from google">
     </aside>
     <section>     
       <h2>The Document Outline</h2>
